@@ -23,7 +23,6 @@ import java.time.ZoneOffset;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -83,7 +82,7 @@ class PaymentReportServiceImplTest {
     private Submission submissionSFF;
     private Submission submissionNSFF;
     private Submission submissionSH19;
-    private Submission submissionSH19_SAMEDAY;
+    private Submission submissionSH19SameDay;
 
     @BeforeEach
     void setUp() {
@@ -113,7 +112,7 @@ class PaymentReportServiceImplTest {
             .withFeeOnSubmission("50")
             .withPaymentSessions(createPaymentSessions("PAY_FF"))
             .withStatus(SubmissionStatus.REJECTED_BY_VIRUS_SCAN).build();
-        submissionSH19_SAMEDAY = builder.withId("FAILED_FEE").withCompany(company).withFormDetails(FORM_SH19_SAMEDAY_FEE)
+        submissionSH19SameDay = builder.withId("FAILED_FEE").withCompany(company).withFormDetails(FORM_SH19_SAMEDAY_FEE)
             .withConfirmationReference("REF_FF").withPresenter(presenter).withSubmittedAt(START_DATE.atTime(13, 13, 13))
             .withFeeOnSubmission("50")
             .withPaymentSessions(createPaymentSessions("PAY_FF"))
@@ -240,7 +239,7 @@ class PaymentReportServiceImplTest {
         final String successFileLink = "link.to.uploaded.success.file";
 
         expectFindPaidSubmissions(PaymentReportServiceImpl.SUCCESSFUL_STATUSES, START_DATE,
-            Arrays.asList(submissionSFF, submissionNSFF, submissionSH19_SAMEDAY));
+            Arrays.asList(submissionSFF, submissionNSFF, submissionSH19SameDay));
         expectReportUpload(successFileLink, sh19ReportName);
         expectFindPaidSubmissions(PaymentReportServiceImpl.FAILED_STATUSES, START_DATE,
             Arrays.asList(submissionSFF, submissionNSFF));
@@ -294,14 +293,16 @@ class PaymentReportServiceImplTest {
     @Test
     void generateCsvFileContent() throws IOException {
         final List<PaymentTransaction> transactions = Arrays.asList(submissionSFF, submissionNSFF,
-                submissionSH19_SAMEDAY)
+                submissionSH19SameDay)
             .stream()
             .map(this::buildTransaction)
-            .collect(Collectors.toList());
-        final String expectedCsvContent = "submissionId,customerRef,userEmail,submittedAt,amountPaid,paymentRef,formType,companyNumber\n"
-            + "SCOT_FAILED_FEE,REF_SFF,presenter@nomail.net,2020-08-31T11:11:11,10,PAY_SFF,SQP1,00000000\n"
-            + "FAILED_FEE,REF_FF,presenter@nomail.net,2020-08-31T13:13:13,10,PAY_FF,CS01,00000000\n"
-            + "FAILED_FEE,REF_FF,presenter@nomail.net,2020-08-31T13:13:13,50,PAY_FF,SH19_SAMEDAY,00000000\n";
+            .toList();
+        final String expectedCsvContent = """
+            submissionId,customerRef,userEmail,submittedAt,amountPaid,paymentRef,formType,companyNumber
+            SCOT_FAILED_FEE,REF_SFF,presenter@nomail.net,2020-08-31T11:11:11,10,PAY_SFF,SQP1,00000000
+            FAILED_FEE,REF_FF,presenter@nomail.net,2020-08-31T13:13:13,10,PAY_FF,CS01,00000000
+            FAILED_FEE,REF_FF,presenter@nomail.net,2020-08-31T13:13:13,50,PAY_FF,SH19_SAMEDAY,00000000
+            """;
 
         when(outputStreamWriterFactory.createFor(any(BufferedOutputStream.class))).thenCallRealMethod();
 
